Bug 38056 - ODF import: Page Borders handling broken
Summary: ODF import: Page Borders handling broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: All All
: medium normal
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: odf target:3.7.0 target:3.6.0 target:...
Keywords: regression
Depends on:
Blocks: 44768
  Show dependency treegraph
 
Reported: 2011-06-07 18:44 UTC by shreks2099
Modified: 2012-08-06 08:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
A ODT Document with Page Borders (22.16 KB, application/vnd.oasis.opendocument.text)
2011-06-07 18:44 UTC, shreks2099
Details
Test kit with WRITER sample and screenshots (356.42 KB, application/zip)
2011-06-07 22:50 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description shreks2099 2011-06-07 18:44:52 UTC
Created attachment 47699 [details]
A ODT Document with Page Borders

An ODT file is created with page borders using LibreOffce 3.3.2, however the page borders are gone when the document is opened by LibreOffice 3.4.0. This should be a bug.
Comment 1 Rainer Bielefeld Retired 2011-06-07 22:46:58 UTC
[Reproducible] with "LibreOffice 3.4.0  – WIN7  Home Premium  (64bit) English UI [OOO340m1 (Build:12)]". 

Not only a WRITER problem, also CALC affected.  When a document created with OOo3.1.1 will have been opened with LibO 3.4. no page borders will not be shown. If the document has been saved with LibO3.4 (without changes), the page borders will be lost finally and not be visible with OOo 3.1.1

With LibO 3.4 CALC also Page background will not be visible in documents from OOo3.1.1, but that might be a completely different effect, because the background will reappear when you open document with OOo 3.1.1 after it has been saved with LibO 3.4

It's not only a problem with Documents from former versions, also for documents created with LibO 3.4 WRITER (CALC not tested) page borders do not work reliable. My "manewLibO34doc4_ShouldShowPageborderAllAround.odt" should show page borders all around (and opened with OOo3.1.1 4 borders are shown), but when I reopen it with 3.4 only the border at the top of the page will be visible.

I think that is OS independent.

@shreks2099:
With shat OS / Platform did you test?
Comment 2 Rainer Bielefeld Retired 2011-06-07 22:50:40 UTC
Created attachment 47701 [details]
Test kit with WRITER sample and screenshots

The writer document should show page borders all around, but does show only border at top of the page. Please also see comment 1
Comment 3 Björn Michaelsen 2011-12-23 12:22:59 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 4 Björn Michaelsen 2011-12-23 17:02:40 UTC
needinfo keyword redundant by needinfo status.
Comment 5 sasha.libreoffice 2012-01-26 01:19:34 UTC
reproduced in LibO 3.6.0 master on Fedora 64 bit
Comment 6 Not Assigned 2012-07-19 10:35:02 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7f9928bfa561ccb6ed4e2baacc7d6960bc1ce231

fdo#38056: ODF import: fix page style attributes:
Comment 7 Michael Stahl (allotropia) 2012-07-19 10:51:36 UTC
so most of this is a duplicate of bug 38542,
but there is one additional twist here:

if i import the first document in current master, then the left, right,
and bottom borders look correct, but the top border is wrong:
it has the right total width, but the lines have the wrong widths,
they are all equally wide.

the document has these attributes:

 fo:border="0.0701in double #000000" style:border-line-width="0.0008in 0.0346in 0.0346in"

what happens here is that the stuff in fo:border (which defaults
to equal line widths) effectively overrides the top border width.

this didn't happen in OOo 3.3 for some reason unknown to me,
though the code looks also wrong there, the invalidation of the
AllBorder property is missing there as well.

fixed on master.
Comment 8 Not Assigned 2012-07-20 07:27:04 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a05f22cd3253ae5c45495d0c081e1f44a3ff756&g=libreoffice-3-6

fdo#38056: ODF import: fix page style attributes:


It will be available in LibreOffice 3.6.1.
Comment 9 Not Assigned 2012-07-20 07:33:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bb406ff1ce016c96cc735e0c20ae51f7dac235b5&g=libreoffice-3-5

fdo#38056: ODF import: fix page style attributes:


It will be available in LibreOffice 3.5.6.
Comment 10 Not Assigned 2012-07-24 10:09:03 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=524caf98ca542668df91ee214c970ba50fc3f268&g=libreoffice-3-6-0

fdo#38056: ODF import: fix page style attributes:


It will be available already in LibreOffice 3.6.0.
Comment 11 Not Assigned 2012-08-03 21:34:15 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e74e9f3c0931f34fb5421056851a06b83501ce9

fdo#38056: fix XMLTextImportPropertyMapper regression:
Comment 12 Not Assigned 2012-08-04 06:37:01 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb42588dcdfe27df5812f9f41b56022e0d5b4cf4&g=libreoffice-3-6

fdo#38056: fix XMLTextImportPropertyMapper regression:


It will be available in LibreOffice 3.6.1.
Comment 13 Not Assigned 2012-08-04 06:50:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3347e2644f44d4a4165d594126bcd1c924b82a9a&g=libreoffice-3-5

fdo#38056: fix XMLTextImportPropertyMapper regression:


It will be available in LibreOffice 3.5.7.
Comment 14 Not Assigned 2012-08-06 08:21:57 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d5c66878ddb902c2121fc6efa77b376ff9fa752f&g=libreoffice-3-5-6

fdo#38056: fix XMLTextImportPropertyMapper regression:


It will be available already in LibreOffice 3.5.6.