fdo#38056: ODF import: fix page style attributes:

PageMasterImportPropMapper: in the case of a single "fo:border"
and "style:border-line-width" attribute, it is possible that the border
is imported wrongly, like this:

1. pAllBorderProperty is set from the imported value, with name "TopBorder"
2. individual pNewBorder[i] are created as copies from pAllBorderProperty,
   one of which also with name "TopBorder"
3. pNewBorder[i] is updated with widths from pBorderWidths[i]
4. the individual pNewBorder[i] are added to the property vector
5. the property vector is sorted by property name
6. the properites are applied in order; if the pNewBorder[TOP]
   happens to precede the pAllBorderProperty (which is indeterminate
   as they both have name "TopBorder"), then the pAllBorderProperty
   will overwrite the border widths computed in step 3.

Thus, nerf the various pAllFoo properties so they do not override
the individual Foo properties later on.

Change-Id: I87755f1184d59da2aa72ac053e6f77d7295d6958
(cherry picked from commit 7f9928bfa561ccb6ed4e2baacc7d6960bc1ce231)